2004-01-02  Marcus Meissner <marcus@jet.franken.de>

	* canon.c, usb.c: lock keys and audio support in PowerShot S50, from
	  rcaputo@users.sf.net

2003-11-08  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* canon.c, canon.h: Added support for Optura 20 (reported by Walt H)

2003-10-27  Marcus Meissner <meissner@suse.de>

	* canon.c: PowerShot S50 and A300 got lost somewhere.

2003-09-20  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* canon.c, canon.h, usb.c, usb.h: Added G5 support
	  (patches by Andreas Klemm <andreas@FreeBSD.org>)

2003-10-10 Olivier Crete <tester@tester.ca>
	* library.c: Add Canon A80

2003-09-20  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* canon.c, canon.h, usb.c: Added support for 
          EOS 300D/Digital Rebel/KISS Digital, thanks to Johan Herland 
          and T.V.

2003-05-19 Marcus Meissner <marcus@jet.franken.de>
	
	* canon.c, canon.h: Added 4 patches with support
	  for the A300, S400, A60 and A70. (Might not be 100%
	  correct in specifying subtypes and capture ability.)

	  These seem to parallel support PTP and Canon mode
	  with 1 USB id according to traces sent. Strange.

2003-05-06 Marcus Meissner <marcus@jet.franken.de>
	
	* library.c,canon.c: 2 bug fixes for audio files from
	  Ben Low <ben@bdlow.net>.

2003-04-07 Stephen H. Westin <westin@graphics.cornell.edu>

	* Update README, TODO, ChangeLog
	* Support for Optura 200 MC/MVX2i camcorder

2003/04/04 Stephen H. Westin <westin@graphics.cornell.edu>

	* CANON_PS_A70 is now CANON_PS_PRO70, to avoid confusion with new
	  PowerShot A70, a completely different camera.
	* Added comments with product ID's for A60, A70, which are PTP-only.
	* Added ID's for EOS 10D; will use same code as EOS D30/D60.
	* Image key and size (for immediate download from capture) are now
	  in the CameraPrivateLibrary structure, so they aren't passed as
	  explicit parameters.
	* capture_step moved to CameraPrivateLibrary structure to keep track