@@ -1,3 +1,8 @@
+2004-01-14  Hans Ulrich Niedermann  <gp@n-dimensional.de>
+
+	* canon.c, canon.h: Add support for Canon ZR-70MC
+	  Thanks for the report by Kevin R. Bulgrien.
+
 2004-01-02  Marcus Meissner <marcus@jet.franken.de>
 
 	* canon.c, usb.c: lock keys and audio support in PowerShot S50, from
